// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Requisition parameters for Liquid Legions V2 protocols.
message LiquidLegionsV2Params {
  // Serialized `ElGamalPublicKey` message from public API.
  bytes el_gamal_public_key = 1;
  bytes el_gamal_public_key_signature = 2;
  string el_gamal_public_key_signature_algorithm_oid = 3;
}

// Requisition parameters for HMSS protocol.
message HonestMajorityShareShuffleParams {
  // Serialized Keyset of TinkPublicKeyHandle.
  bytes tink_public_key = 1;
  bytes tink_public_key_signature = 2;
  string tink_public_key_signature_algorithm_oid = 3;
}
